panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_return_without_expr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_return_without_expr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_without_expr.c"
   (declaration external exit~0 `fn(∅: int) -> void` ∅)
   (function-definition external
      f~1 `fn() -> void`
      (compound-statement
         (return ∅)
         (expression
            (call `void`
               (addressof `ptr<fn(∅: int) -> void>`
                  (exit~0 `fn(∅: int) -> void`))
               (42 `int`)))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`)))))))

----- stderr -----
