panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_sign_extend.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_sign_extend.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_sign_extend.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`
      (params
         argv~3 `ptr<ptr<char>>`
         l~4 `long`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~3 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (l~4 `long`)))))
   (function-definition external
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (compound-statement
            (definition c~9 `signed char` (truncate `signed char` (negate `int` (42 `int`))))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (c~9 `signed char`))))
            (definition s~10 `short` (sign-extend `short` (c~9 `signed char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (s~10 `short`))))
            (definition i~11 `int` (sign-extend `int` (c~9 `signed char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (i~11 `int`))))
            (definition j~12 `int` (sign-extend `int` (s~10 `short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (j~12 `int`))))
            (definition l~13 `long` (sign-extend `long` (c~9 `signed char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (l~13 `long`)))
            (definition m~14 `long` (sign-extend `long` (s~10 `short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (m~14 `long`)))
            (definition n~15 `long` (sign-extend `long` (i~11 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (n~15 `long`))))
         (compound-statement
            (definition c~16 `signed char` (truncate `signed char` (42 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (c~16 `signed char`))))
            (definition s~17 `short` (sign-extend `short` (c~16 `signed char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (s~17 `short`))))
            (definition i~18 `int` (sign-extend `int` (c~16 `signed char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (i~18 `int`))))
            (definition j~19 `int` (sign-extend `int` (s~17 `short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (sign-extend `long` (j~19 `int`))))
            (definition l~20 `long` (sign-extend `long` (c~16 `signed char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (l~20 `long`)))
            (definition m~21 `long` (sign-extend `long` (s~17 `short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (m~21 `long`)))
            (definition n~22 `long` (sign-extend `long` (i~18 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (n~22 `long`)))))))

----- stderr -----
