panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_subtraction.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_subtraction.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_subtraction.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (42 `int`))
         (definition b~3 `char` (truncate `char` (42 `int`)))
         (return (subtract `int` (sign-extend `int` (b~3 `char`)) (a~2 `int`))))))

----- stderr -----
