panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_value_of_assign_to_dereferenced_ptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_value_of_assign_to_dereferenced_ptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_value_of_assign_to_dereferenced_ptr.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `int` (42 `int`))
         (definition p~3 `ptr<int>`
            (addressof `ptr<int>`
               (x~2 `int`)))
         (return (assign `int` (deref `int` (p~3 `ptr<int>`)) (27 `int`))))))

----- stderr -----
