panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_zero_extend.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_zero_extend.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_zero_extend.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`
      (params
         argv~3 `ptr<ptr<char>>`
         l~4 `unsigned long`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~3 `ptr<ptr<char>>`) (sign-extend `unsigned long` (1 `int`)))))
               (l~4 `unsigned long`)))))
   (function-definition external
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (compound-statement
            (definition c~9 `unsigned char` (truncate `unsigned char` (42 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (c~9 `unsigned char`))))
            (definition s~10 `unsigned short` (zero-extend `unsigned short` (c~9 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (s~10 `unsigned short`))))
            (definition i~11 `unsigned int` (zero-extend `unsigned int` (c~9 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (i~11 `unsigned int`))))
            (definition j~12 `unsigned int` (zero-extend `unsigned int` (s~10 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (j~12 `unsigned int`))))
            (definition l~13 `unsigned long` (zero-extend `unsigned long` (c~9 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (l~13 `unsigned long`)))
            (definition m~14 `unsigned long` (zero-extend `unsigned long` (s~10 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (m~14 `unsigned long`)))
            (definition n~15 `unsigned long` (zero-extend `unsigned long` (i~11 `unsigned int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (n~15 `unsigned long`))))
         (compound-statement
            (definition c~16 `unsigned char` (truncate `unsigned char` (250 `int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (c~16 `unsigned char`))))
            (definition s~17 `unsigned short` (zero-extend `unsigned short` (c~16 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (s~17 `unsigned short`))))
            (definition i~18 `unsigned int` (zero-extend `unsigned int` (c~16 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (i~18 `unsigned int`))))
            (definition j~19 `unsigned int` (zero-extend `unsigned int` (s~17 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (zero-extend `unsigned long` (j~19 `unsigned int`))))
            (definition l~20 `unsigned long` (zero-extend `unsigned long` (c~16 `unsigned char`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (l~20 `unsigned long`)))
            (definition m~21 `unsigned long` (zero-extend `unsigned long` (s~17 `unsigned short`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (m~21 `unsigned long`)))
            (definition n~22 `unsigned long` (zero-extend `unsigned long` (i~18 `unsigned int`)))
            (expression
               (call `void`
                  (addressof `ptr<fn(argv: ptr<ptr<char>>, l: unsigned long) -> void>`
                     (print~1 `fn(argv: ptr<ptr<char>>, l: unsigned long) -> void`))
                  (argv~8 `ptr<ptr<char>>`)
                  (n~22 `unsigned long`)))))))

----- stderr -----
